--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-server.port=8087
-spring.datasource.url=jdbc:mysql://localhost:3306/account-management
+server.port=8092
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Gestion-comptes
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # Hibernate properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # create, create-drop
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibrnate.SQL = DEBUG
 logging.level.org.hibrnate.type= TRACE
 #Spring.thymeleaf.cache = false
-
 
